Updated the branch API to be a bit more REST compatible